--- a/GroList/package.json
+++ b/GroList/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.0"
+    "react-native": "0.66.0",
+    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "intl": "^1.2.5",
+    "react-native-dotenv": "^3.2.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
